--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pylint==2.4.2
 pyparsing==2.4.2
 pytest==5.1.3
 python-dateutil==2.8.0
+pytz==2019.2
 requests==2.22.0
 resources==0.0.1
 rope==0.14.0
