--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ requests==2.22.0
 resources==0.0.1
 rope==0.14.0
 six==1.12.0
+sortedcontainers==2.1.0
 typed-ast==1.4.0
 urllib3==1.25.6
 wcwidth==0.1.7
