--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.3.0
 atomicwrites==1.3.0
 attrs==19.1.0
+blist==1.3.6
 certifi==2019.9.11
 chardet==3.0.4
 colorama==0.4.1
@@ -16,6 +17,7 @@ more-itertools==7.2.0
 numpy==1.17.2
 packaging==19.2
 pluggy==0.13.0
+psutil==5.6.3
 py==1.8.0
 pylint==2.4.2
 pyparsing==2.4.2
